# tauri-nextjs-shadcn-template

./: .repomixignore  README.md  package.json  pnpm-lock.yaml  repomix.config.json  tauri-nextjs-rustmcpsdk-repomix-output.xml
rust-doc-scraper/: .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rust-doc-scraper/src/: convert.rs  extract.rs  main.rs  targets.rs  utils.rs  writer.rs
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/mcp_client/: handler.rs  main.rs  mod.rs
src-tauri/src/mcp_server/: handler.rs  main.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/components/: mode-toggle.tsx
src/styles/: globals.css
