[package]
name = "rust-doc-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "cookies",
    "blocking",
    "rustls-tls",
] }
html2md = "0.2"
scraper = "0.23.1"
rayon = "1.8"
anyhow = "1.0"
futures = "0.3"
